Fix light/dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,8 +67,6 @@ h6 {
 
 .body {
   height: 100vh;
-  background-color: white;
-  color: black;
 }
 
 * {
@@ -104,8 +102,6 @@ h6 {
   .mathsie-worksheet {
     display: flex;
     height: 100%;
-    background-color: white;
-
 
     .equations {
 
